# ultimate-rag

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONFIG_AND_API.md  PROJECT_GUIDE.md  README.md  pyproject.toml  rag.db
app/: main.py
app/api/: deps.py
app/api/v1/routes/: chat.py  documents.py  ingestion.py  query.py
app/models/: agent.py  chat.py  common.py  document.py  ingestion.py  query.py
app/observability/: logging.py  timing.py  tracing.py
app/prompts/: agent.py  ingestion.py  retrieval.py
app/repositories/: base.py
app/repositories/cache/: factory.py  ignite.py
app/repositories/graph/: _engine.py  age.py  factory.py  memgraph.py  networkx_store.py
app/repositories/relational/: database.py  documents.py  messages.py  metadata_catalog.py  schema.py  sessions.py
app/repositories/storage/: files.py
app/repositories/vector/: chroma.py  factory.py  pgvector.py  qdrant.py
app/services/agent/: graph.py  tool_agent.py
app/services/chunking/: base.py  factory.py  fixed.py  recursive.py  semantic.py
app/services/citation/: builder.py
app/services/embeddings/: azure_openai.py  base.py  factory.py  ollama.py  openai_provider.py
app/services/graph/: service.py
app/services/ingestion/: service.py
app/services/llm/: base.py  factory.py  ollama_provider.py  openai_provider.py
app/services/parsing/: base.py  custom_parser.py  docling_client.py  factory.py
app/services/reranking/: base.py  bge.py  factory.py
app/services/retrieval/: autofilter.py  pipeline.py  service.py
app/utils/: config.py  text.py
config/: config.yaml
